--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
-    <h1>로그인</h1>
+    <h1>회원가입</h1>
     <form action="">
     <label for="id">아이디 : </label>
     <input type="text" name="id" id="id">
@@ -16,8 +16,15 @@
     <button type="button" id="btn_id_change">아이디바꾸기</button>
     <br>
     <div class="box" id="id_info"></div>
-    </form>
+    <label for="input_password">비밀번호 : </label>
+    <input type="password" name="password" id="input_password">
     <br>
-    <button id="home">홈으로</button>
+    <label for="input_password_check">비밀번호확인 : </label>
+    <input type="password" id="input_password_check">
+    <div class="box" id="pw_info"></div>
+</form>
+    <br>
+    <button type="button" id="btn_login">로그인으로</button>
+    <button type="button" id="btn_home">홈으로</button>
 </body>
 </html>
