--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -22,6 +22,8 @@
     <label for="input_password_check">비밀번호확인 : </label>
     <input type="password" id="input_password_check">
     <div class="box" id="pw_info"></div>
+    <br>
+    <button type="button" id="btn_regist">회원가입</button>
 </form>
     <br>
     <button type="button" id="btn_login">로그인으로</button>
