색깔로구분하는기능추가예정

--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -23,6 +23,11 @@
     <input type="password" id="input_password_check">
     <div class="box" id="pw_info"></div>
     <br>
+        아이디확인
+        <div class="check" id="id_check_color"></div>
+        비밀번호확인
+        <div class="check" id="pw_check_color"></div>
+    <br>
     <button type="button" id="btn_regist">회원가입</button>
 </form>
     <br>
